--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.1)
 
 project(reversi)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+
 find_package(OpenGL REQUIRED)
 
 include_directories(${OPENGL_INCLUDE_DIRS})
@@ -10,9 +12,13 @@ set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only" )
 set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
 
 add_subdirectory(glfw)
+add_subdirectory(glad)
+add_subdirectory(glm)
 
-add_executable(reversi WIN32 MACOSX_BUNDLE main.cpp)
-target_link_libraries(reversi ${OPENGL_LIBRARIES} glfw)
+add_executable(reversi WIN32 MACOSX_BUNDLE main.cpp Shader.cpp Shader.h Logger.cpp Logger.h)
+target_link_libraries(reversi PRIVATE glfw)
+target_link_libraries(reversi PRIVATE glad)
+target_link_libraries(reversi PRIVATE glm)
 
 if (APPLE)
     set_target_properties(reversi PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Reversi")
