switch to using glut instead of glfw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,14 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.12)
 
 project(reversi)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -framework OpenGL -framework GLUT")
 
 find_package(OpenGL REQUIRED)
 
 include_directories(${OPENGL_INCLUDE_DIRS})
 
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only" )
-set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
-
-add_subdirectory(glfw)
-add_subdirectory(glad)
-add_subdirectory(glm)
-
-add_executable(reversi WIN32 MACOSX_BUNDLE main.cpp Shader.cpp Shader.h Logger.cpp Logger.h)
-target_link_libraries(reversi PRIVATE glfw)
-target_link_libraries(reversi PRIVATE glad)
-target_link_libraries(reversi PRIVATE glm)
+add_executable(reversi WIN32 MACOSX_BUNDLE main.cpp main.h ui.cpp ui.h helper.cpp helper.h Logger.cpp Logger.h)
 
 if (APPLE)
     set_target_properties(reversi PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Reversi")
