--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "glfw"]
-	path = glfw
+[submodule "include/glm"]
+	path = include/glm
+	url = https://github.com/glfw/glm.git
+[submodule "include/glfw"]
+	path = include/glfw
 	url = https://github.com/glfw/glfw.git
-[submodule "glm"]
-	path = glm
-	url = https://github.com/g-truc/glm
+[submodule "include/imgui"]
+	path = include/imgui
+	url = https://github.com/ocornut/imgui.git
