--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "lib/glm"]
 	path = lib/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "lib/uint128_t"]
+	path = lib/uint128_t
+	url = https://github.com/calccrypto/uint128_t.git
