--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,9 @@ cmake_minimum_required(VERSION 3.19)
 project(reversi C CXX)
 
 include(CheckCCompilerFlag)
-include(FindProtobuf)
 
-find_package(Protobuf REQUIRED)
-include_directories(${PROTOBUF_INCLUDE_DIR})
-protobuf_generate_cpp(PROTO_SRC PROTO_HEADER src/online/reversi.proto)
-add_library(proto ${PROTO_HEADER} ${PROTO_SRC})
+find_package(Protobuf CONFIG REQUIRED)
+set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
 set(CMAKE_REQUIRED_LINK_OPTIONS "-arch;arm64")
 check_c_compiler_flag("-arch arm64" arm64)
@@ -51,18 +48,9 @@ endforeach()
 # add end include guard
 file(APPEND ${output_header} "\n#endif //REVERSI_RESOURCES_H")
 
-
-if (MSVC_VERSION GREATER_EQUAL "1900")
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
-    if (_cpp_latest_flag_supported)
-        add_compile_options("/std:c++latest")
-    endif()
-endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -pthread")
 
 find_package(OpenGL REQUIRED)
-
 include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR}/lib/imgui)
 include_directories(${PROJECT_SOURCE_DIR}/lib/imgui/backends)
@@ -75,7 +63,7 @@ add_subdirectory(lib/glfw)
 add_subdirectory(lib/glad)
 add_subdirectory(lib/glm)
 
-add_executable(reversi WIN32 MACOSX_BUNDLE src/main.cpp src/ui/shader.cpp src/ui/shader.h src/logger.cpp src/logger.h src/ui/ui.cpp src/ui/ui.h src/state.h src/game/input.cpp src/game/input.h src/state.cpp src/ui/shaders.h src/ui/helper.cpp src/ui/helper.h src/game/reversi.cpp src/game/reversi.h src/game/ai.cpp src/game/ai.h src/main.h src/ui/tabs/game.cpp src/ui/tabs/game.h src/ui/tabs/theme.cpp src/ui/tabs/theme.h src/ui/tabs/debug.cpp src/ui/tabs/debug.h src/ui/game.h src/ui/game.cpp src/ui/shaders.cpp src/ui/tabs/ai.cpp src/ui/tabs/ai.h src/game/fastboard/fastboard.cpp src/game/fastboard/fastboard.h src/game/fastboard/edges.cpp src/game/fastboard/edges.h src/game/fastboard/flip.cpp src/game/fastboard/flip.h src/game/fastboard/moves.cpp src/game/fastboard/moves.h src/online/client.cpp src/online/client.h src/game/search.cpp src/game/search.h src/online/reversi.pb.cc src/online/handler.h)
+add_executable(reversi MACOSX_BUNDLE src/main.cpp src/ui/shader.cpp src/ui/shader.h src/logger.cpp src/logger.h src/ui/ui.cpp src/ui/ui.h src/state.h src/game/input.cpp src/game/input.h src/state.cpp src/ui/shaders.h src/ui/helper.cpp src/ui/helper.h src/game/reversi.cpp src/game/reversi.h src/game/ai.cpp src/game/ai.h src/main.h src/ui/tabs/game.cpp src/ui/tabs/game.h src/ui/tabs/theme.cpp src/ui/tabs/theme.h src/ui/tabs/debug.cpp src/ui/tabs/debug.h src/ui/game.h src/ui/game.cpp src/ui/shaders.cpp src/ui/tabs/ai.cpp src/ui/tabs/ai.h src/game/fastboard/fastboard.cpp src/game/fastboard/fastboard.h src/game/fastboard/edges.cpp src/game/fastboard/edges.h src/game/fastboard/flip.cpp src/game/fastboard/flip.h src/game/fastboard/moves.cpp src/game/fastboard/moves.h src/online/client.cpp src/online/client.h src/game/search.cpp src/game/search.h src/online/reversi.proto)
 target_sources(reversi PRIVATE
         lib/imgui/imgui.cpp
         lib/imgui/imgui_draw.cpp
@@ -90,11 +78,9 @@ target_sources(reversi PRIVATE lib/uint128_t/uint128_t.cpp)
 target_link_libraries(reversi PRIVATE glfw)
 target_link_libraries(reversi PRIVATE glad)
 target_link_libraries(reversi PRIVATE glm)
-target_link_libraries(reversi PRIVATE proto ${Protobuf_LIBRARIES})
+target_link_libraries(reversi PRIVATE protobuf::libprotobuf)
+protobuf_generate(TARGET reversi)
 
-if(WIN32)
-    target_link_libraries(reversi PRIVATE wsock32 ws2_32)
-endif()
 if (APPLE)
     set_target_properties(reversi PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Reversi")
 endif()
