--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR}/lib/imgui)
 include_directories(${PROJECT_SOURCE_DIR}/lib/imgui/backends)
 include_directories(${PROJECT_SOURCE_DIR}/lib/uint128_t)
+include_directories(${PROJECT_SOURCE_DIR}/lib/whereami/src)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only" )
 set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
@@ -63,7 +64,7 @@ add_subdirectory(lib/glfw)
 add_subdirectory(lib/glad)
 add_subdirectory(lib/glm)
 
-add_executable(reversi MACOSX_BUNDLE src/main.cpp src/ui/shader.cpp src/ui/shader.h src/logger.cpp src/logger.h src/ui/ui.cpp src/ui/ui.h src/state.h src/game/input.cpp src/game/input.h src/state.cpp src/ui/shaders.h src/ui/helper.cpp src/ui/helper.h src/game/reversi.cpp src/game/reversi.h src/game/ai.cpp src/game/ai.h src/main.h src/ui/tabs/game.cpp src/ui/tabs/game.h src/ui/tabs/theme.cpp src/ui/tabs/theme.h src/ui/tabs/debug.cpp src/ui/tabs/debug.h src/ui/game.h src/ui/game.cpp src/ui/shaders.cpp src/ui/tabs/ai.cpp src/ui/tabs/ai.h src/game/fastboard/fastboard.cpp src/game/fastboard/fastboard.h src/game/fastboard/edges.cpp src/game/fastboard/edges.h src/game/fastboard/flip.cpp src/game/fastboard/flip.h src/game/fastboard/moves.cpp src/game/fastboard/moves.h src/online/client.cpp src/online/client.h src/game/search.cpp src/game/search.h src/online/reversi.proto)
+add_executable(reversi MACOSX_BUNDLE src/main.cpp src/ui/shader.cpp src/ui/shader.h src/logger.cpp src/logger.h src/ui/ui.cpp src/ui/ui.h src/state.h src/game/input.cpp src/game/input.h src/state.cpp src/ui/shaders.h src/ui/helper.cpp src/ui/helper.h src/game/reversi.cpp src/game/reversi.h src/game/ai.cpp src/game/ai.h src/main.h src/ui/tabs/game.cpp src/ui/tabs/game.h src/ui/tabs/theme.cpp src/ui/tabs/theme.h src/ui/tabs/debug.cpp src/ui/tabs/debug.h src/ui/game.h src/ui/game.cpp src/ui/shaders.cpp src/ui/tabs/ai.cpp src/ui/tabs/ai.h src/game/fastboard/fastboard.cpp src/game/fastboard/fastboard.h src/game/fastboard/edges.cpp src/game/fastboard/edges.h src/game/fastboard/flip.cpp src/game/fastboard/flip.h src/game/fastboard/moves.cpp src/game/fastboard/moves.h src/online/client.cpp src/online/client.h src/game/search.cpp src/game/search.h src/online/reversi.proto src/ui/tabs/online.cpp src/ui/tabs/online.h src/online/handler.cpp src/online/handler.h)
 target_sources(reversi PRIVATE
         lib/imgui/imgui.cpp
         lib/imgui/imgui_draw.cpp
@@ -74,6 +75,7 @@ target_sources(reversi PRIVATE
         lib/imgui/backends/imgui_impl_glfw.cpp
         )
 target_sources(reversi PRIVATE lib/uint128_t/uint128_t.cpp)
+target_sources(reversi PRIVATE lib/whereami/src/whereami.c)
 
 target_link_libraries(reversi PRIVATE glfw)
 target_link_libraries(reversi PRIVATE glad)
